--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,31 +1,35 @@
 <h1>Sign up here! </h1>
+
 <%= form_for(@user) do |f| %>
-<div>
-<%= f.label :name %>
-<%= f.text_field :name %>
-</div>
 
-<div>
-<%= f.label :username %>
-<%= f.text_field :username %>
-</div>
+<%= render '/layouts/errors', locals: { object: @user} %>
 
-<div>
-<%= f.label :age %>
-<%= f.text_field :age %>
-</div>
+    <div>
+    <%= f.label :name %>
+    <%= f.text_field :name#, required:true %>
+    </div>
 
-<div>
-<%= f.label :email %>
-<%= f.email_field :email %>
-</div>
+    <div>
+    <%= f.label :username %>
+    <%= f.text_field :username %>
+    </div>
 
-<div>
-<%= f.label :password %>
-<%= f.password_field :password %>
-</div>
+    <div>
+    <%= f.label :age %>
+    <%= f.text_field :age %>
+    </div>
 
-<%= f.submit "Finalize sign up" %>
+    <div>
+    <%= f.label :email %>
+    <%= f.email_field :email %>
+    </div>
+
+    <div>
+    <%= f.label :password %>
+    <%= f.password_field :password %>
+    </div>
+
+    <%= f.submit "Finalize sign up" %>
 
 
 <% end %>
