--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,27 +6,27 @@
 
     <div>
     <%= f.label :name %>
-    <%= f.text_field :name#, required:true %>
+    <%= f.text_field :name, required:true %>
     </div>
 
     <div>
     <%= f.label :username %>
-    <%= f.text_field :username %>
+    <%= f.text_field :username, required:true  %>
     </div>
 
     <div>
     <%= f.label :age %>
-    <%= f.text_field :age %>
+    <%= f.text_field :age, required:true  %>
     </div>
 
     <div>
     <%= f.label :email %>
-    <%= f.email_field :email %>
+    <%= f.email_field :email, required:true  %>
     </div>
 
     <div>
     <%= f.label :password %>
-    <%= f.password_field :password %>
+    <%= f.password_field :password, required:true  %>
     </div>
 
     <%= f.submit "Finalize sign up" %>
