--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,7 @@
-<h1>Sign up here! </h1>
+<h1>Sign up here!</h1>
 
+<%= render partial: 'layouts/errors', locals: {object: @user} %>
 <%= form_for(@user) do |f| %>
-
-<%= render '/layouts/errors', locals: { object: @user} %>
 
     <div>
     <%= f.label :name %>
