--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,7 @@
       <%= link_to 'New Profile', new_profile_path, class: 'navlink' %>
       <%= link_to 'All Games', games_path, class: 'navlink' %>
       <%= link_to 'New Game', new_game_path, class: 'navlink' %>
+      <%= link_to 'All Users', users_path, class: 'navlink' %>
       <%= link_to 'My Account', user_path(current_user), class: 'navlink' %>
     </nav>
     <% end %>
